# MLTriageEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  TASKLIST.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  propmt.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: presubmit.yml
graders/: __init__.py  grader1.py  grader2.py  grader3.py
scenarios/: .gitkeep  config_scenarios.json  log_scenarios.json  pipeline_scenarios.json
scripts/: pre_submit.py
server/: Dockerfile  app.py  environment.py  gradio_ui.py  requirements.txt
tasks/: __init__.py  base.py  task1_config.py  task2_logs.py  task3_pipeline.py
tests/: test_environment.py  test_graders.py  test_inference_contract.py  test_tasks.py
